database username modified

--- a/SpringRESTJPA/src/main/resources/application.properties
+++ b/SpringRESTJPA/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/myemployee_db
-spring.datasource.username=xixijiang
+spring.datasource.username=yourusername
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.platform=postgresql
